--- a/assets/style.css
+++ b/assets/style.css
@@ -55,3 +55,8 @@ footer {
     margin: 0;
     padding: 0;
 }
+
+/* Prevent highlighting when hovering on the legend */
+.smk-status.smk-elastic-container .smk-elastic-frame.smk-legend-status {
+    pointer-events: none;
+}
